[2026-02-09 / S3 및 개발스웨거 수정]